src/main/java/io/github/repir/tools/ByteSearch/ByteRegexParser.java
// Generated from ByteRegex.g4 by ANTLR 4.1

    package io.github.repir.tools.ByteSearch;
    import io.github.repir.tools.ByteSearch.Node.*; 
    import java.util.ArrayList;
    import io.github.repir.tools.Lib.Log;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ByteRegexParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OR=1, LITERAL=2, CASE=3, STAR=4, QUES=5, PLUS=6, DOT=7, END=8, CHAR=9, 
		BRACKOPEN=10, BRACKCLOSE=11, BLOCKOPEN=12, BLOCKCLOSE=13, START=14, MINUS=15, 
		LOOKAHEAD=16, LOOKBEHIND=17;
	public static final String[] tokenNames = {
		"<INVALID>", "'|'", "LITERAL", "CASE", "'*'", "'?'", "'+'", "'.'", "'$'", 
		"CHAR", "'('", "')'", "'['", "']'", "'^'", "'-'", "LOOKAHEAD", "LOOKBEHIND"
	};
	public static final int
		RULE_startRule = 0, RULE_frag = 1, RULE_string = 2, RULE_operand = 3, 
		RULE_set = 4, RULE_bracket = 5, RULE_character = 6;
	public static final String[] ruleNames = {
		"startRule", "frag", "string", "operand", "set", "bracket", "character"
	};

	@Override
	public String getGrammarFileName() { return "ByteRegex.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	   public static Log log = new Log( ByteRegexParser.class );
	   private boolean casesensitive = false;
	   public Node root;

	public ByteRegexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartRuleContext extends ParserRuleContext {
		public FragContext frag;
		public FragContext frag() {
			return getRuleContext(FragContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ByteRegexParser.EOF, 0); }
		public TerminalNode CASE() { return getToken(ByteRegexParser.CASE, 0); }
		public TerminalNode QUES() { return getToken(ByteRegexParser.QUES, 0); }
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).enterStartRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).exitStartRule(this);
		}
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(15);
			_la = _input.LA(1);
			if (_la==QUES) {
				{
				setState(14); match(QUES);
				}
			}

			setState(19);
			_la = _input.LA(1);
			if (_la==CASE) {
				{
				setState(17); match(CASE);
				 casesensitive = true; 
				}
			}

			setState(24);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LITERAL) | (1L << DOT) | (1L << END) | (1L << CHAR) | (1L << BRACKOPEN) | (1L << BLOCKOPEN) | (1L << START) | (1L << MINUS))) != 0)) {
				{
				setState(21); ((StartRuleContext)_localctx).frag = frag();
				 root = ((StartRuleContext)_localctx).frag.fragout.start;
				               //log.info("startRule %s %s %d", ((StartRuleContext)_localctx).frag.fragout, ((StartRuleContext)_localctx).frag.fragout.start.type, ((StartRuleContext)_localctx).frag.fragout.end.size() ); 
				            
				}
			}

			setState(26); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FragContext extends ParserRuleContext {
		public Fragment fragout;
		public StringContext string;
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public List<TerminalNode> OR() { return getTokens(ByteRegexParser.OR); }
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public TerminalNode OR(int i) {
			return getToken(ByteRegexParser.OR, i);
		}
		public FragContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_frag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).enterFrag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).exitFrag(this);
		}
	}

	public final FragContext frag() throws RecognitionException {
		FragContext _localctx = new FragContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_frag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28); ((FragContext)_localctx).string = string();
			 ((FragContext)_localctx).fragout =  ((FragContext)_localctx).string.fragout; 
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(30); match(OR);
				setState(31); ((FragContext)_localctx).string = string();

				      if ( _localctx.fragout.start.type == TYPE.CHOICE ) {
				        Node next[] = new Node[ _localctx.fragout.start.next.length + 1 ];
				        System.arraycopy( _localctx.fragout.start.next, 0, next, 0, _localctx.fragout.start.next.length );
				        next[ _localctx.fragout.start.next.length ] = ((FragContext)_localctx).string.fragout.start;
				        _localctx.fragout.start.next = next;
				      } else {
				        Node node = new Node( TYPE.CHOICE, casesensitive );
				        node.next = new Node[2];
				        node.next[0] = _localctx.fragout.start;
				        node.next[1] = ((FragContext)_localctx).string.fragout.start;
				        (_localctx.fragout).start = node;
				        _localctx.fragout.addEnd( ((FragContext)_localctx).string.fragout );
				      } 
				   
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			 
			            //log.info("frag %s %s %d", _localctx.fragout, (_localctx.fragout).start.type, (_localctx.fragout).end.size() ); 
			          
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public Fragment fragout;
		public OperandContext operand;
		public OperandContext operand(int i) {
			return getRuleContext(OperandContext.class,i);
		}
		public List<OperandContext> operand() {
			return getRuleContexts(OperandContext.class);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(39); ((StringContext)_localctx).operand = operand();
				 
				             if (_localctx.fragout == null)
				                ((StringContext)_localctx).fragout =  ((StringContext)_localctx).operand.fragout;
				             else {
				                _localctx.fragout.setEnds( ((StringContext)_localctx).operand.fragout.start );
				                _localctx.fragout.addEnd( ((StringContext)_localctx).operand.fragout ); 
				             }
				           
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LITERAL) | (1L << DOT) | (1L << END) | (1L << CHAR) | (1L << BRACKOPEN) | (1L << BLOCKOPEN) | (1L << START) | (1L << MINUS))) != 0) );
			}
			 
			            //log.info("string %s %s %d", _localctx.fragout, (_localctx.fragout).start.type, (_localctx.fragout).end.size() ); 
			          
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandContext extends ParserRuleContext {
		public Fragment fragout;
		public SetContext set;
		public TerminalNode STAR() { return getToken(ByteRegexParser.STAR, 0); }
		public TerminalNode QUES() { return getToken(ByteRegexParser.QUES, 0); }
		public TerminalNode PLUS() { return getToken(ByteRegexParser.PLUS, 0); }
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public OperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).enterOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).exitOperand(this);
		}
	}

	public final OperandContext operand() throws RecognitionException {
		OperandContext _localctx = new OperandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); ((OperandContext)_localctx).set = set();
			 ((OperandContext)_localctx).fragout =  ((OperandContext)_localctx).set.fragout; 
			setState(69);
			switch (_input.LA(1)) {
			case QUES:
				{
				{
				setState(48); match(QUES);
				 
				           Node node = new Node( TYPE.CHOICE, casesensitive );
				           node.next = new Node[2];
				           node.next[0] = _localctx.fragout.start;
				             
				setState(52);
				_la = _input.LA(1);
				if (_la==QUES) {
					{
					setState(50); match(QUES);
					 node.next[1] = node.next[0]; node.next[0] = null; 
					}
				}

				 _localctx.fragout.addEnd( node );
				             (_localctx.fragout).start = node;
				        
				}
				}
				break;
			case STAR:
				{
				{
				setState(55); match(STAR);

				           Node node = new Node( TYPE.CHOICE, casesensitive );
				           node.next = new Node[2];
				           node.next[0] = _localctx.fragout.start;
				             
				setState(59);
				_la = _input.LA(1);
				if (_la==QUES) {
					{
					setState(57); match(QUES);
					 node.next[1] = node.next[0]; node.next[0] = null; 
					}
				}

				           _localctx.fragout.setEnds( node );
				           (_localctx.fragout).start = node;
				           _localctx.fragout.addEnd(node);
				      
				}
				}
				break;
			case PLUS:
				{
				{
				setState(62); match(PLUS);

				           Node node = new Node( TYPE.CHOICE, casesensitive );
				           node.next = new Node[2];
				           node.next[0] = _localctx.fragout.start;
				             
				setState(66);
				_la = _input.LA(1);
				if (_la==QUES) {
					{
					setState(64); match(QUES);
					 node.next[1] = node.next[0]; node.next[0] = null; 
					}
				}

				  _localctx.fragout.setEnds( node );
				              _localctx.fragout.addEnd( node );
				       
				}
				}
				break;
			case EOF:
			case OR:
			case LITERAL:
			case DOT:
			case END:
			case CHAR:
			case BRACKOPEN:
			case BRACKCLOSE:
			case BLOCKOPEN:
			case START:
			case MINUS:
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			 
			            //log.info("operand %s %s %d", _localctx.fragout, (_localctx.fragout).start.type, (_localctx.fragout).end.size() ); 
			          
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public Fragment fragout;
		public BracketContext bracket;
		public FragContext frag;
		public FragContext frag() {
			return getRuleContext(FragContext.class,0);
		}
		public TerminalNode BRACKOPEN() { return getToken(ByteRegexParser.BRACKOPEN, 0); }
		public TerminalNode BRACKCLOSE() { return getToken(ByteRegexParser.BRACKCLOSE, 0); }
		public TerminalNode LOOKAHEAD() { return getToken(ByteRegexParser.LOOKAHEAD, 0); }
		public BracketContext bracket() {
			return getRuleContext(BracketContext.class,0);
		}
		public TerminalNode LOOKBEHIND() { return getToken(ByteRegexParser.LOOKBEHIND, 0); }
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).enterSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).exitSet(this);
		}
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_set);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			switch (_input.LA(1)) {
			case LITERAL:
			case DOT:
			case END:
			case CHAR:
			case BLOCKOPEN:
			case START:
			case MINUS:
				{
				setState(71); ((SetContext)_localctx).bracket = bracket();
				 ((SetContext)_localctx).fragout =  new Fragment();
				                 (_localctx.fragout).start = ((SetContext)_localctx).bracket.node;
				                 _localctx.fragout.addEnd( ((SetContext)_localctx).bracket.node );
				               
				}
				break;
			case BRACKOPEN:
				{
				setState(74); match(BRACKOPEN);
				setState(86);
				switch (_input.LA(1)) {
				case LITERAL:
				case DOT:
				case END:
				case CHAR:
				case BRACKOPEN:
				case BLOCKOPEN:
				case START:
				case MINUS:
					{
					setState(75); ((SetContext)_localctx).frag = frag();
					 ((SetContext)_localctx).fragout =  ((SetContext)_localctx).frag.fragout; 
					}
					break;
				case LOOKAHEAD:
					{
					{
					setState(78); match(LOOKAHEAD);
					setState(79); ((SetContext)_localctx).frag = frag();
					 
					            ((SetContext)_localctx).fragout =  ((SetContext)_localctx).frag.fragout;
					            Fragment f = new Fragment();
					            Node lookahead = new Node( TYPE.LOOKAHEAD, casesensitive );
					            lookahead.next = new Node[2];
					            lookahead.next[0] = _localctx.fragout.start;
					            lookahead.next[1] = null;
					            _localctx.fragout.setEnds( null );
					            _localctx.fragout.addEnd( lookahead );
					            (_localctx.fragout).start = lookahead;
					           
					}
					}
					break;
				case LOOKBEHIND:
					{
					{
					setState(82); match(LOOKBEHIND);
					setState(83); ((SetContext)_localctx).frag = frag();
					 
					            ((SetContext)_localctx).fragout =  ((SetContext)_localctx).frag.fragout;
					            Fragment f = new Fragment();
					            Node lookahead = new Node( TYPE.LOOKBEHIND, casesensitive );
					            lookahead.next = new Node[2];
					            lookahead.next[0] = _localctx.fragout.start;
					            lookahead.next[1] = null;
					            _localctx.fragout.setEnds( null );
					            _localctx.fragout.addEnd( lookahead );
					            (_localctx.fragout).start = lookahead;
					           
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(88); match(BRACKCLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			 
			            //log.info("set %s %s %d", _localctx.fragout, (_localctx.fragout).start.type, (_localctx.fragout).end.size() ); 
			          
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketContext extends ParserRuleContext {
		public Node node;
		public CharacterContext character;
		public TerminalNode MINUS(int i) {
			return getToken(ByteRegexParser.MINUS, i);
		}
		public TerminalNode BLOCKCLOSE() { return getToken(ByteRegexParser.BLOCKCLOSE, 0); }
		public CharacterContext character(int i) {
			return getRuleContext(CharacterContext.class,i);
		}
		public List<TerminalNode> MINUS() { return getTokens(ByteRegexParser.MINUS); }
		public List<CharacterContext> character() {
			return getRuleContexts(CharacterContext.class);
		}
		public TerminalNode BLOCKOPEN() { return getToken(ByteRegexParser.BLOCKOPEN, 0); }
		public BracketContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracket; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).enterBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).exitBracket(this);
		}
	}

	public final BracketContext bracket() throws RecognitionException {
		BracketContext _localctx = new BracketContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bracket);
		  boolean positive = true;
		            char lastcharacter = 0;
		   
		int _la;
		try {
			setState(114);
			switch (_input.LA(1)) {
			case LITERAL:
			case DOT:
			case END:
			case CHAR:
			case START:
				enterOuterAlt(_localctx, 1);
				{
				setState(92); ((BracketContext)_localctx).character = character();
				 ((BracketContext)_localctx).node =  ((BracketContext)_localctx).character.node; 
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(95); match(MINUS);
				 ((BracketContext)_localctx).node =  new Node( TYPE.CHAR, casesensitive );
				             (_localctx.node).next = new Node[1];
				             _localctx.node.setAllowed( '-' );
				           
				}
				break;
			case BLOCKOPEN:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(97); match(BLOCKOPEN);
				setState(98); ((BracketContext)_localctx).character = character();
				 ((BracketContext)_localctx).node =  new Node( TYPE.CHAR, casesensitive );
				                 (_localctx.node).next = new Node[1];
				                 if (((BracketContext)_localctx).character.node.type == TYPE.START) {
				                    positive=false;
				                 } else {
				                    lastcharacter = ((BracketContext)_localctx).character.node.allowedChar();
				                    _localctx.node.combineAllowed( ((BracketContext)_localctx).character.node );
				                 }
				               
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LITERAL) | (1L << DOT) | (1L << END) | (1L << CHAR) | (1L << START) | (1L << MINUS))) != 0)) {
					{
					setState(107);
					switch (_input.LA(1)) {
					case MINUS:
						{
						{
						setState(100); match(MINUS);
						setState(101); ((BracketContext)_localctx).character = character();
						 
						          char nextcharacter = ((BracketContext)_localctx).character.node.allowedChar();
						          _localctx.node.setAllowedRange( (char)(lastcharacter + 1), nextcharacter);
						          lastcharacter = nextcharacter;
						       
						}
						}
						break;
					case LITERAL:
					case DOT:
					case END:
					case CHAR:
					case START:
						{
						setState(104); ((BracketContext)_localctx).character = character();
						 
						         //log.info("add bracket %s", ((BracketContext)_localctx).character.node.toString());
						         lastcharacter = ((BracketContext)_localctx).character.node.allowedChar();
						         _localctx.node.combineAllowed( ((BracketContext)_localctx).character.node );
						      
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(112); match(BLOCKCLOSE);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			 if (!positive)
			               _localctx.node.invertAllowed();
			             //log.info("bracket %s %s %d", _localctx.node, (_localctx.node).type, (_localctx.node).next.length ); 
			          
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharacterContext extends ParserRuleContext {
		public Node node;
		public Token CHAR;
		public Token LITERAL;
		public TerminalNode DOT() { return getToken(ByteRegexParser.DOT, 0); }
		public TerminalNode START() { return getToken(ByteRegexParser.START, 0); }
		public TerminalNode LITERAL() { return getToken(ByteRegexParser.LITERAL, 0); }
		public TerminalNode CHAR() { return getToken(ByteRegexParser.CHAR, 0); }
		public TerminalNode END() { return getToken(ByteRegexParser.END, 0); }
		public CharacterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_character; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).enterCharacter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ByteRegexListener ) ((ByteRegexListener)listener).exitCharacter(this);
		}
	}
